--- a/apijwt/Dockerfile
+++ b/apijwt/Dockerfile
@@ -1,14 +1,12 @@
-# Usar imagem base com JDK 21 da Eclipse Temurin (OpenJDK)
-FROM eclipse-temurin:21-jdk-jammy
-
-# Definir diretório de trabalho dentro do container
+# Etapa 1: build com Maven
+FROM maven:3.9.6-eclipse-temurin-21 AS builder
 WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
 
-# Copiar o JAR gerado pelo Maven para dentro do container
-COPY target/apijwt-0.0.1-SNAPSHOT.jar app.jar
-
-# Expor a porta que o Spring Boot usa (por padrão 8080)
+# Etapa 2: imagem final com apenas o JAR
+FROM eclipse-temurin:21-jdk-jammy
+WORKDIR /app
+COPY --from=builder /app/target/apijwt-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
-
-# Comando para rodar a aplicação Java
 ENTRYPOINT ["java", "-jar", "app.jar"]
